feat: rewrite despeckle in Java + Leptonica (FFM)
Replace the Rust implementation with a Java 25 rewrite that binds
Leptonica's pixSelectBySize through the Foreign Function & Memory API.
The goal is maintainability: the dust/speckle decision is delegated to
Leptonica instead of a hand-rolled adaptive threshold, and the codebase
is now in a language the author maintains directly.

Pipeline (one page): read (Leptonica) -> keep connected components larger
than the speck size in *either* width or height (L_SELECT_IF_EITHER +
L_SELECT_IF_GT, 8-connected) -> optionally fill pin-holes (invert, same
filter, invert) -> write. The PBM round-trip is pixel-identical: a page
with no specks comes back unchanged. The speck size defaults to dpi/100
(about 3 px at 300 dpi).

Layout (single Gradle module, io.github.p4suta.despeckle):
  - core    Leptonica (the one FFM binding island: System.load of an
            absolute path + a loaderLookup, native access confined here),
            Pix (RAII handle), Despeckler (the pipeline),
            ProcessOptions/ProcessResult, OutputFormat
  - runner  directory walk, fixed thread pool, over-removal guardrail
  - report  before/overlay/after PNGs + index.html (removed pixels in red)
  - cli     picocli front end
core does no directory or thread work, so a future GUI can reuse it.

Build and quality gates (mirrored by CI, run inside the dev container):
  - Gradle 9.5.1 (Kotlin DSL), pinned wrapper; JDK 25 toolchain
  - Spotless + google-java-format (AOSP, 100 columns)
  - Error Prone on every compile, -Werror (only -Xlint:-options excluded)
  - SpotBugs at max effort (one justified FFM MemorySegment.NULL exclusion)
  - JUnit: FFM smoke, pixel-identical round-trip, the polarity/connectivity
    pin (a tall thin stroke is kept, a 2x2 speck is dropped), hole-filling,
    and a directory end-to-end run

The dev environment is fully Dockerised (Temurin 25 + Leptonica + the
language-agnostic quality tools); justfile recipes and lefthook hooks
rou